--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         
         <h1 id="title">RRRrrra2987<br>のサイト！<small>スマホ用</small></h1>
         <div class="title"><br>
-        <a href="scratch.html" class="list">scratchの作品</a><br><br>
-        <a class="list" href="brog/index.html">ブログ</a><br><br>
+        <!--<a href="scratch.html" class="list">scratchの作品</a><br><br>-->
+        <!--<a class="list" href="brog/index.html">ブログ</a><br><br>-->
         <a class="list" href="https://rrrrrra2987.github.io/scratch-backup/">スタジオのバックアップ共</a> <br><br>
         <a class="list" href="(ﾟ∀ﾟ)ｱﾋｬ.html">(ﾟ∀ﾟ)ｱﾋｬ</a><br><br>
         <a class="list" href="https://scratch.mit.edu/studios/28395915/">scratchのプロフィール</a><br><br>
