--- a/to-ahiru/github.html
+++ b/to-ahiru/github.html
@@ -14,6 +14,7 @@
             <li><a href="githubs/part2.html">ファイルについて</a></li>
             <li><a href="githubs/part3.html">HTMLについて:1</a></li>
             <li><a href="githubs/part4.html">HTMLについて:2</a></li>
+            <li><a href="githubs/part5.html">CSSって？</a></li>
         </ul>
         <small>ここは、RRRrrra2987がきままにウェブサイトの作り方を我流で教えるものです。詳しいことは自分で実践してみましょう！</small>
     </body>
