--- a/to-ahiru/githubs/part6.html
+++ b/to-ahiru/githubs/part6.html
@@ -13,11 +13,11 @@
         
         <h3>書き方</h3>
         例としては、
-        <pre class="sample">
-            h1{
-                color:red;
-            }
-        </pre>
+        <div class="sample">
+            h1{<br>
+                color:red;<br>
+            }<br>
+        </div>
         上のようにすることで、指定できます！<br>
         <h3>説明</h3>
         h1について…<br>
