--- a/to-ahiru/githubs/part7.html
+++ b/to-ahiru/githubs/part7.html
@@ -25,6 +25,9 @@
             #width{
                 width: 40px;
             }
+            body{
+                font-size:40px;
+            }
         </style>
     </head>
     <body>
